--- a/GC_MS_5_2A.qmd
+++ b/GC_MS_5_2A.qmd
@@ -126,7 +126,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 1
+AET <- 5
 ```
 
 ## Uniform distribution
@@ -213,7 +213,7 @@ total_TN <- 0
 for (i in 1:N_sim) {
 ## 2) Concentration from the log-normal distribution
 base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## I) No Correction
 corrected_conc <- base_conc_sim * simulated_RRF
@@ -256,9 +256,6 @@ summary_table <- rbind(summary_table, data.frame(
 
 ```
 
-```{r}
-summary_table
-```
 
 ```{r}
 hist(base_conc_sim, 
@@ -272,8 +269,6 @@ hist(simulated_RRF,
 ```
 
 ## GC-MS Correction UF Factor
-
-
 
 ```{r}
 rsd <- function(x) {
@@ -305,7 +300,7 @@ for (m_name in names(UF_list)) {
 for (i in 1:N_sim) {
 ## 2) Concentration from the log-normal distribution
 base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## II) UF corrections
   
@@ -359,7 +354,7 @@ UF_RSD
 summary_table
 ```
 
-## GC-MS Correction Factor percentile
+## GC-MS Correction Factor mean/16th percentile
 
 ```{r}
 percentile <- function(x) {
@@ -383,7 +378,7 @@ percentileGCMS <- percentile(RRF_GCMS_superior0)
 for (i in 1:N_sim) {
 ## 2) Concentration from the log-normal distribution
 base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 
 exp_conc <- (base_conc_sim * simulated_RRF)
@@ -416,7 +411,7 @@ SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
 
 summary_table <- rbind(summary_table, data.frame(
-  Method = "Percentile (16th)",
+  Method = "Mean/Percentile (16th)",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = SD_FN,
@@ -431,8 +426,7 @@ summary_table <- rbind(summary_table, data.frame(
 
 ## GC-MS Correction RRFlow
 
-This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. 
-We also force the UF to be positive by removing low and high responders. 
+This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. We also force the UF to be positive by removing low and high responders.
 
 ```{r}
 
@@ -467,14 +461,15 @@ for (i in 1:N_sim) {
 
 ## 2) Concentration from the log-normal distribution
 base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
-## A) Sampling of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## IV) RRflow condition
-
+## add a normal / lognormal distribution to get a "exp" RRF with some variability e.g 30%
+exp_RRF <- simulated_RRF * rnorm(n = N_extractables, 1, 0.3)
 exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
 corrected_conc <- exp_conc * UF             # corrected concentration: Exp * UF (conservative method)
 condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2) # RRFlow conditions rescaling factor should be focused only to those compounds which exhibits RRF< 0.5 and RRF>2 
-corrected_conc[condition] <- exp_conc[condition] / simulated_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
+corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
@@ -502,6 +497,92 @@ SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "RRFlow",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
+
+## GC-MS Correction RRF<1
+
+This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. We also force the UF to be positive by removing low and high responders.
+
+```{r}
+
+## RSD is calculated only for RRFs between 0.05 and 1 
+## 'Compounds with RRF lower than 0.05 are excluded from UF calculation (20 times lower than the internal standard).page 8
+## Therefore, as a criterion for RRF selection, only compounds with an RRF less than 1 are actually considered for UF calculation. page 8
+
+rsd <- function(x) {
+  x_use = x[x<=1&x>0.05]
+  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+}
+
+## Simulation starts
+set.seed(123)
+N_sim <- 10000
+N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
+# remove 0 values
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+# Apply Part 18 formula for database
+UF <- 1/(1-rsd(RRF_GCMS_superior0))
+
+
+# Start simulation
+for (i in 1:N_sim) {
+
+## 2) Concentration from the log-normal distribution
+base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
+## A) Sampling from the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## IV) RRflow condition
+## add a normal / lognormal distribution to get a "exp" RRF with some variability e.g 30%
+exp_RRF <- simulated_RRF * rnorm(n = N_extractables, 1, 0.3)
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc * UF             # corrected concentration: Exp * UF (conservative method)
+condition <- (simulated_RRF < 1)  # Condition only for LOW responders
+corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
+
+  is_above_threshold <- base_conc_sim > AET
+  reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+}
+
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
+summary_table <- rbind(summary_table, data.frame(
+  Method = "RRF<1",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = SD_FN,
@@ -542,12 +623,12 @@ for (i in 1:N_sim) {
 
 ## 2) Concentration from the log-normal distribution
 base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
-## V RRF < 1
+## V 
 
 exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
-corrected_conc <- exp_conc / conservative_RRF_estimate 
+corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
@@ -589,108 +670,84 @@ summary_table <- rbind(summary_table, data.frame(
 
 ```
 
-```{r}
-summary_table
-```
+## GC-MS Correction percentile 20th
 
-## Optimised percentile
+Here we divide by the 20th percentile (which is arbitrary) assuming to capture the left hand side of the RRF database (low responders)
 
-
-Here we find the best percentile to divide to target a recall of 95% (which is also arbitrary)
 ```{r}
 set.seed(123)
-
-target_recall <- 0.95
-found <- FALSE
-optimal_percentile <- NA
-
 N_sim <- 10000
 N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
 
 RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
 RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
-for (test_percentile in seq(0.50, 0.01, by = -0.01)) {
-  
-  conservative_RRF_estimate <- quantile(RRF_GCMS_superior0, test_percentile, na.rm=TRUE)
-  
-  total_FN <- 0
-  total_FP <- 0
-  total_TP <- 0
-  total_TN <- 0
+conservative_RRF_estimate <- quantile(gcms_clap_clean$"5 µg/mL", 0.20)
 
-  for (i in 1:N_sim) {
-    base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
-    simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
-    
-    exp_conc <- base_conc_sim * simulated_RRF   
+for (i in 1:N_sim) {
 
-    corrected_conc <- exp_conc / conservative_RRF_estimate 
+## 2) Concentration from the log-normal distribution
+base_conc_sim <- rlnorm(N_extractables, meanlog = -1.15, sdlog = 1.91)
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## V 
 
-    is_above_threshold <- base_conc_sim > AET
-    reported_above_threshold <- corrected_conc > AET
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 
-    total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-    total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-    total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-    total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
 
-  current_recall <- total_TP / (total_TP + total_FN)
-  
-  print(paste("Percentile:", test_percentile, "-> Recall:", round(current_recall, 4))) 
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
 
-  if(current_recall >= target_recall) {
-    optimal_percentile <- test_percentile
-    found <- TRUE
-    break  
-  }
-}
 
-if(found) {
-  print(paste("Optimal Percentile for 95% Recall:", optimal_percentile))
-  
-  count_Above_AET <- total_TP + total_FN
-  count_Below_AET  <- total_TN + total_FP
-  
-  FN_Rate_final <- total_FN / count_Above_AET
-  FP_Rate_final <- total_FP / count_Below_AET
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
-  recall <- total_TP / count_Above_AET
-  precision <- total_TP / (total_TP + total_FP)
-  
-  F1 <- (2 * precision * recall / (precision + recall))
-  beta <- 5
-  f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
-
-  SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
 SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
-  summary_table <- rbind(summary_table, data.frame(
-    Method = paste0("Optimized_P"),
-    FN_Rate = FN_Rate_final,
-    FP_Rate = FP_Rate_final,
-    FN_SD = SD_FN,
-    FP_SD = SD_FP,
-    precision = precision,
-    recall = recall,
-    F1 = F1,
-    f_betal = f_beta 
-  ))
-  
-} else {
-  print("1st percentile was not conservative enough to reach 95% recall.")
-}
-```
+summary_table <- rbind(summary_table, data.frame(
+  Method = "Percentile 20th",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
+
+```
 
 ```{r}
 summary_table
 ```
 
 
-
+```{r}
+summary_table
+```
 
 ## Machine Learning
 
@@ -778,9 +835,7 @@ summary_table <- rbind(summary_table, data.frame(
 summary_table
 ```
 
-
-
-## Comparison
+# Comparisons
 
 ```{r}
 plot_data <- summary_table %>%
@@ -797,11 +852,12 @@ method_levels <- c(
   "UF (5)", 
   "UF (10)",  
   "UF (RSD)",
-  "Percentile (16th)", 
+  "Mean/Percentile (16th)", 
   "RRFlow",
+  "RRF<1",
   "Percentile 10th",
-  "Machine Learning",
-  "Optimized_P")
+  "Percentile 20th",
+  "Machine Learning")
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
 
@@ -828,7 +884,7 @@ summary_table %>%
   select(Method, precision, recall, F1, f_betal)
 ```
 
-ROC and Precision Recall plots
+# ROC and Precision Recall plots
 
 ```{r}
 ggplot(summary_table, aes(x = FP_Rate, y = recall, color = Method)) +
@@ -850,5 +906,3 @@ ggplot(summary_table, aes(x = recall, y = precision, color = Method)) +
   theme_minimal()
 
 ```
-
-
