--- a/GC_MS_5_1B.qmd
+++ b/GC_MS_5_1B.qmd
@@ -257,10 +257,6 @@ summary_table <- rbind(summary_table, data.frame(
 ```
 
 ```{r}
-summary_table
-```
-
-```{r}
 hist(base_conc_sim, 
      main = "Histogram of Base concentration around the AET", 
      xlab = "Concentration",
@@ -357,7 +353,7 @@ UF_RSD
 summary_table
 ```
 
-## GC-MS Correction Factor percentile
+## GC-MS Correction Factor mean/16th percentile
 
 ```{r}
 percentile <- function(x) {
@@ -371,6 +367,7 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
+
 
 meanGCMS <- mean(rnorm(N_extractables, 1, 0.2))
 percentileGCMS <- percentile(rnorm(N_extractables, 1, 0.2))
@@ -411,7 +408,7 @@ SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
 
 summary_table <- rbind(summary_table, data.frame(
-  Method = "Percentile (16th)",
+  Method = "Mean/Percentile (16th)",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = SD_FN,
@@ -464,11 +461,12 @@ base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## B) Normal Distribution of RRF around 1
 simulated_RRF <- rnorm(N_extractables, 1, 0.2)
 ## IV) RRflow condition
-
+## add a normal / lognormal distribution to get a "exp" RRF with some variability e.g 30%
+exp_RRF <- simulated_RRF * rnorm(n = N_extractables, 1, 0.3)
 exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
 corrected_conc <- exp_conc * UF             # corrected concentration: Exp * UF (conservative method)
 condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2) # RRFlow conditions rescaling factor should be focused only to those compounds which exhibits RRF< 0.5 and RRF>2 
-corrected_conc[condition] <- exp_conc[condition] / simulated_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
+corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
@@ -508,6 +506,91 @@ summary_table <- rbind(summary_table, data.frame(
 
 ```
 
+## GC-MS Correction RRF\<1
+
+This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. We also force the UF to be positive by removing low and high responders.
+
+```{r}
+
+## RSD is calculated only for RRFs between 0.05 and 1 
+## 'Compounds with RRF lower than 0.05 are excluded from UF calculation (20 times lower than the internal standard).page 8
+## Therefore, as a criterion for RRF selection, only compounds with an RRF less than 1 are actually considered for UF calculation. page 8
+
+rsd <- function(x) {
+  x_use = x[x<=1&x>0.05]
+  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+}
+
+## Simulation starts
+set.seed(123)
+N_sim <- 10000
+N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
+# remove 0 values
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+# Apply Part 18 formula for database
+UF <- 1/(1-rsd(rnorm(N_extractables, 1, 0.2)))
+
+
+# Start simulation
+for (i in 1:N_sim) {
+
+## 1) Concentration around the AET
+base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
+## B) Normal Distribution of RRF around 1
+simulated_RRF <- rnorm(N_extractables, 1, 0.2)
+## IV) RRflow condition
+## add a normal / lognormal distribution to get a "exp" RRF with some variability e.g 30%
+exp_RRF <- simulated_RRF * rnorm(n = N_extractables, 1, 0.3)
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc * UF             # corrected concentration: Exp * UF (conservative method)
+condition <- (simulated_RRF < 1)  # Condition only for LOW responders
+corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
+
+  is_above_threshold <- base_conc_sim > AET
+  reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+}
+
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
+summary_table <- rbind(summary_table, data.frame(
+  Method = "RRF<1",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
 ```{r}
 UF
 summary_table
@@ -527,8 +610,6 @@ total_TP <- 0
 total_TN <- 0
 
 
-
-
 conservative_RRF_estimate <- quantile(rnorm(N_extractables, 1, 0.2), 0.10)
 
 for (i in 1:N_sim) {
@@ -537,10 +618,10 @@ for (i in 1:N_sim) {
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## B) Normal Distribution of RRF around 1
 simulated_RRF <- rnorm(N_extractables, 1, 0.2)
-## V RRF < 1
+## V 
 
 exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
-corrected_conc <- exp_conc / conservative_RRF_estimate 
+corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
@@ -582,97 +663,78 @@ summary_table <- rbind(summary_table, data.frame(
 
 ```
 
-```{r}
-summary_table
-```
+## GC-MS Correction percentile 20th
 
-## Optimised percentile
-
-Here we find the best percentile to divide to target a recall of 95% (which is also arbitrary)
+Here we divide by the 20th percentile (which is arbitrary) assuming to capture the left hand side of the RRF database (low responders)
 
 ```{r}
 set.seed(123)
-
-target_recall <- 0.95
-found <- FALSE
-optimal_percentile <- NA
-
 N_sim <- 10000
 N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 
 
-for (test_percentile in seq(0.50, 0.01, by = -0.01)) {
-  
-  conservative_RRF_estimate <- quantile(rnorm(N_extractables, 1, 0.2), test_percentile, na.rm=TRUE)
-  
-  total_FN <- 0
-  total_FP <- 0
-  total_TP <- 0
-  total_TN <- 0
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
-  for (i in 1:N_sim) {
-    base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
-    simulated_RRF <- rnorm(N_extractables, 1, 0.2)
-    
-    exp_conc <- base_conc_sim * simulated_RRF   
+conservative_RRF_estimate <- quantile(rnorm(N_extractables, 1, 0.2), 0.20)
 
-    corrected_conc <- exp_conc / conservative_RRF_estimate 
+for (i in 1:N_sim) {
 
-    is_above_threshold <- base_conc_sim > AET
-    reported_above_threshold <- corrected_conc > AET
+## 1) Concentration around the AET
+base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
+## B) Normal Distribution of RRF around 1
+simulated_RRF <- rnorm(N_extractables, 1, 0.2)
+## V 
 
-    total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-    total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-    total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-    total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
+
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
 
-  current_recall <- total_TP / (total_TP + total_FN)
-  
-  print(paste("Percentile:", test_percentile, "-> Recall:", round(current_recall, 4))) 
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
 
-  if(current_recall >= target_recall) {
-    optimal_percentile <- test_percentile
-    found <- TRUE
-    break  
-  }
-}
 
-if(found) {
-  print(paste("Optimal Percentile for 95% Recall:", optimal_percentile))
-  
-  count_Above_AET <- total_TP + total_FN
-  count_Below_AET  <- total_TN + total_FP
-  
-  FN_Rate_final <- total_FN / count_Above_AET
-  FP_Rate_final <- total_FP / count_Below_AET
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
-  recall <- total_TP / count_Above_AET
-  precision <- total_TP / (total_TP + total_FP)
-  
-  F1 <- (2 * precision * recall / (precision + recall))
-  beta <- 5
-  f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
-
-  SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
 SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
-  summary_table <- rbind(summary_table, data.frame(
-    Method = paste0("Optimized_P"),
-    FN_Rate = FN_Rate_final,
-    FP_Rate = FP_Rate_final,
-    FN_SD = SD_FN,
-    FP_SD = SD_FP,
-    precision = precision,
-    recall = recall,
-    F1 = F1,
-    f_betal = f_beta 
-  ))
-  
-} else {
-  print("1st percentile was not conservative enough to reach 95% recall.")
-}
+summary_table <- rbind(summary_table, data.frame(
+  Method = "Percentile 20th",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+
+```
+
+```{r}
+summary_table
 ```
 
 ```{r}
@@ -765,7 +827,7 @@ summary_table <- rbind(summary_table, data.frame(
 summary_table
 ```
 
-## Comparison
+# Comparisons
 
 ```{r}
 plot_data <- summary_table %>%
@@ -782,11 +844,12 @@ method_levels <- c(
   "UF (5)", 
   "UF (10)",  
   "UF (RSD)",
-  "Percentile (16th)", 
+  "Mean/Percentile (16th)", 
   "RRFlow",
+  "RRF<1",
   "Percentile 10th",
-  "Machine Learning",
-  "Optimized_P")
+  "Percentile 20th",
+  "Machine Learning")
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
 
@@ -797,7 +860,7 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
                 position = position_dodge(width = 0.9), width = 0.2) +
   labs(
     title = paste0("Comparison of GC-MS Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
-    subtitle = "Conc. Uniform distribution (around AET), RRF sampled from CLAP list data",
+    subtitle = "Conc. Uniform distribution (around AET), RRF normally distributed",
     y = "Rate (%)",
     x = "Method") +
   geom_text(aes(label = sprintf("%.1f%%", Rate*100)), position = position_dodge(width = 0.9), hjust = -0.5, size = 3, vjust = 0.1) +
@@ -813,7 +876,7 @@ summary_table %>%
   select(Method, precision, recall, F1, f_betal)
 ```
 
-ROC and Precision Recall plots
+# ROC and Precision Recall plots
 
 ```{r}
 ggplot(summary_table, aes(x = FP_Rate, y = recall, color = Method)) +
