--- a/GC_MS_5_3A.qmd
+++ b/GC_MS_5_3A.qmd
@@ -65,7 +65,6 @@ hist(gcms_clap_clean$"20 µg/mL",
      xlab = "RRF",
      col = "red")
 
-
 ```
 
 # LC/MS pos data
@@ -127,7 +126,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 15
+AET <- 5
 ```
 
 ## Uniform distribution
@@ -201,10 +200,6 @@ summary_table <- data.frame(
 
 ## GC-MS No Correction Scenarios
 
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ No UF correction
-
-Update 02 Jan 2026: add for loop and change the replace to FALSE Update 09 Jan 2026: add the exp concentration and change the base_conc_sim
-
 ```{r}
 set.seed(123)
 N_sim <- 10000
@@ -213,7 +208,7 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
-total_points <- N_sim * N_extractables
+
 
 for (i in 1:N_sim) {
 Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
@@ -221,44 +216,47 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## I) No Correction
 corrected_conc <- base_conc_sim * simulated_RRF
 
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
 
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
 F1 <- (2 * precision * recall / (precision + recall))
 beta <- 5
 f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "No Correction",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
   precision = precision,
   recall = recall,
   F1 = F1,
   f_betal = f_beta
 ))
 
-```
-
-```{r}
-summary_table
 ```
 
 ```{r}
@@ -274,17 +272,11 @@ hist(simulated_RRF,
 
 ## GC-MS Correction UF Factor
 
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ UF correction : from 2, 4, 5, 10 and UF = 1/(1-RSD)
-
 ```{r}
-#rsd <- function(x) {
-  #return(sd(x, na.rm = TRUE) / mean(x, na.rm = TRUE))
-#}
-
 rsd <- function(x) {
-  x_use = x[x<=1&x>0.05]
-  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+  return(sd(x, na.rm = TRUE) / mean(x, na.rm = TRUE))
 }
+
 
 set.seed(123)
 N_sim <- 10000
@@ -298,7 +290,6 @@ UF_list <- c(
 )
 
 N_extractables <- 80
-total_points <- N_sim * N_extractables
 
 for (m_name in names(UF_list)) {
   uf_val <- UF_list[[m_name]]
@@ -314,31 +305,36 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## II) UF corrections
   
-  exp_conc <- (base_conc_sim / simulated_RRF)
+  exp_conc <- (base_conc_sim * simulated_RRF)
   corrected_conc <- exp_conc * uf_val 
   
-  total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-  total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-  total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-  total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
+  is_above_threshold <- base_conc_sim > AET
+  reported_above_threshold <- corrected_conc > AET
 
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
 
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final+TN_Rate_final)
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
 F1 <- (2 * precision * recall / (precision + recall))
 beta <- 5
 f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
 
 
@@ -346,15 +342,16 @@ summary_table <- rbind(summary_table, data.frame(
     Method = m_name,
     FN_Rate = FN_Rate_final,
     FP_Rate = FP_Rate_final,
-    FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-    FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+    FN_SD = SD_FN,
+    FP_SD = SD_FP,
     precision = precision,
     recall = recall,
     F1 = F1,
     f_betal = f_beta
 ))
-
 }
+
+
 UF_RSD
 ```
 
@@ -362,9 +359,7 @@ UF_RSD
 summary_table
 ```
 
-## GC-MS Correction Factor percentile
-
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by dividing 16th percentile
+## GC-MS Correction Factor mean/16th percentile
 
 ```{r}
 percentile <- function(x) {
@@ -378,8 +373,12 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
-total_points <- N_sim * N_extractables
 
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+meanGCMS <- mean(RRF_GCMS_superior0)
+percentileGCMS <- percentile(RRF_GCMS_superior0)
 
 for (i in 1:N_sim) {
 Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
@@ -387,36 +386,44 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+## A) Sampling from the GC/MS dataset (5µg/mL)
 simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 
-exp_conc <- (base_conc_sim / simulated_RRF)
+exp_conc <- (base_conc_sim * simulated_RRF)
 ## III) 16th percentile Correction
-corrected_conc <- exp_conc * (mean(simulated_RRF) / percentile(simulated_RRF))
+corrected_conc <- exp_conc * (meanGCMS / percentileGCMS)
 
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
 
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
 F1 <- (2 * precision * recall / (precision + recall))
 beta <- 5
 f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
+
 summary_table <- rbind(summary_table, data.frame(
-  Method = "Percentile (16th)",
+  Method = "Mean/Percentile (16th)",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
   precision = precision,
   recall = recall,
   F1 = F1,
@@ -427,7 +434,188 @@ summary_table <- rbind(summary_table, data.frame(
 
 ## GC-MS Correction RRFlow
 
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by applying condition on the RRFs.
+This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. We also force the UF to be positive by removing low and high responders.
+
+```{r}
+
+## RSD is calculated only for RRFs between 0.05 and 1 
+## 'Compounds with RRF lower than 0.05 are excluded from UF calculation (20 times lower than the internal standard).page 8
+## Therefore, as a criterion for RRF selection, only compounds with an RRF less than 1 are actually considered for UF calculation. page 8
+
+rsd <- function(x) {
+  x_use = x[x<=1&x>0.05]
+  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+}
+
+## Simulation starts
+set.seed(123)
+N_sim <- 10000
+N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
+# remove 0 values
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+# Apply Part 18 formula for database
+UF <- 1/(1-rsd(RRF_GCMS_superior0))
+
+
+# Start simulation
+for (i in 1:N_sim) {
+
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Sampling from the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## IV) RRflow condition
+## add a normal / lognormal distribution to get a "exp" RRF with some variability e.g 30%
+exp_RRF <- simulated_RRF * rnorm(n = N_extractables, 1, 0.3)
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc * UF             # corrected concentration: Exp * UF (conservative method)
+condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2) # RRFlow conditions rescaling factor should be focused only to those compounds which exhibits RRF< 0.5 and RRF>2 
+corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
+
+  is_above_threshold <- base_conc_sim > AET
+  reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+}
+
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
+summary_table <- rbind(summary_table, data.frame(
+  Method = "RRFlow",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
+## GC-MS Correction RRF\<1
+
+This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. We also force the UF to be positive by removing low and high responders.
+
+```{r}
+
+## RSD is calculated only for RRFs between 0.05 and 1 
+## 'Compounds with RRF lower than 0.05 are excluded from UF calculation (20 times lower than the internal standard).page 8
+## Therefore, as a criterion for RRF selection, only compounds with an RRF less than 1 are actually considered for UF calculation. page 8
+
+rsd <- function(x) {
+  x_use = x[x<=1&x>0.05]
+  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
+}
+
+## Simulation starts
+set.seed(123)
+N_sim <- 10000
+N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
+# remove 0 values
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+# Apply Part 18 formula for database
+UF <- 1/(1-rsd(RRF_GCMS_superior0))
+
+
+# Start simulation
+for (i in 1:N_sim) {
+
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Sampling from the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## IV) RRflow condition
+## add a normal / lognormal distribution to get a "exp" RRF with some variability e.g 30%
+exp_RRF <- simulated_RRF * rnorm(n = N_extractables, 1, 0.3)
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc * UF             # corrected concentration: Exp * UF (conservative method)
+condition <- (simulated_RRF < 1)  # Condition only for LOW responders
+corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average value of the RRF RRFlow application in extractables amount rescaling ( The average RRF determined by the RRFlow will be used to re-calculate the amount of the corresponding compound detected in the extractables study , will assume that it is in the linearity range) 
+
+  is_above_threshold <- base_conc_sim > AET
+  reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+}
+
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
+summary_table <- rbind(summary_table, data.frame(
+  Method = "RRF<1",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
+```{r}
+UF
+summary_table
+```
+
+## GC-MS Correction percentile 10th
+
+Here we divide by the 10th percentile (which is arbitrary) assuming to capture the left hand side of the RRF database (low responders)
 
 ```{r}
 set.seed(123)
@@ -437,54 +625,137 @@ total_FN <- 0
 total_FP <- 0
 total_TP <- 0
 total_TN <- 0
-total_points <- N_sim * N_extractables
+
 
 RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
 RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
+conservative_RRF_estimate <- quantile(gcms_clap_clean$"5 µg/mL", 0.10)
+
 for (i in 1:N_sim) {
+
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Sampling from the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## V 
+
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
+
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
+
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+}
+
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
+
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
+summary_table <- rbind(summary_table, data.frame(
+  Method = "Percentile 10th",
+  FN_Rate = FN_Rate_final,
+  FP_Rate = FP_Rate_final,
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+
+```
+
+## GC-MS Correction percentile 20th
+
+Here we divide by the 20th percentile (which is arbitrary) assuming to capture the left hand side of the RRF database (low responders)
+
+```{r}
+set.seed(123)
+N_sim <- 10000
+N_extractables <- 80
+total_FN <- 0
+total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
+
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
+
+conservative_RRF_estimate <- quantile(gcms_clap_clean$"5 µg/mL", 0.20)
+
+for (i in 1:N_sim) {
+
 Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
 Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
-## IV) RRflow condition
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## V 
 
-exp_conc <- base_conc_sim * simulated_RRF
-corrected_conc <- exp_conc
-condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2)
-corrected_conc[condition] <- exp_conc[condition] / simulated_RRF[condition]
+exp_conc <- base_conc_sim * simulated_RRF   # experimental concentration : True concentration with the actual RRF
+corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
 
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
+
 F1 <- (2 * precision * recall / (precision + recall))
 beta <- 5
 f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
+
 summary_table <- rbind(summary_table, data.frame(
-  Method = "RRFlow",
+  Method = "Percentile 20th",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
   precision = precision,
   recall = recall,
   F1 = F1,
   f_betal = f_beta
 ))
+
 
 ```
 
@@ -492,68 +763,8 @@ summary_table <- rbind(summary_table, data.frame(
 summary_table
 ```
 
-## GC-MS Correction RRF \< 1
-
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by applying condition on the RRFs.
-
 ```{r}
-set.seed(123)
-N_sim <- 10000
-N_extractables <- 80
-total_FN <- 0
-total_FP <- 0
-total_TP <- 0
-total_TN <- 0
-total_points <- N_sim * N_extractables
-
-RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
-RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
-
-for (i in 1:N_sim) {
-Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
-Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
-K <- runif(0.1 * N_extractables, min = 10,    max = 100)
-## 3) Concentration from a custom distribution
-base_conc_sim <- sample(c(Z,Y,K))
-## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
-## V) RRF < 1
-
-corrected_conc <- base_conc_sim
-condition <- (simulated_RRF < 1)
-corrected_conc[condition] <- corrected_conc[condition] / simulated_RRF[condition]
-
-
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
-
-}
-
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
-F1 <- (2 * precision * recall / (precision + recall))
-beta <- 5
-f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
-
-summary_table <- rbind(summary_table, data.frame(
-  Method = "RRF<1",
-  FN_Rate = FN_Rate_final,
-  FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
-  precision = precision,
-  recall = recall,
-  F1 = F1,
-  f_betal = f_beta
-))
-
-
+summary_table
 ```
 
 ## Machine Learning
@@ -602,31 +813,37 @@ simulated_RRF <- py$predict_rrf_raw(sim_data)
 ## no correction
 corrected_conc <- base_conc_sim * simulated_RRF
 
+is_above_threshold <- base_conc_sim > AET
+reported_above_threshold <- corrected_conc > AET
 
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
-
+  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
 }
 
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+count_Above_AET <- total_TP + total_FN
+count_Below_AET  <- total_TN + total_FP
+FN_Rate_final <- total_FN / count_Above_AET
+FP_Rate_final <- total_FP / count_Below_AET
+
+recall <- total_TP / count_Above_AET
+precision <- total_TP / (total_TP + total_FP)
+
 F1 <- (2 * precision * recall / (precision + recall))
 beta <- 5
 f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
+SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
 
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "Machine Learning",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  FN_SD = SD_FN,
+  FP_SD = SD_FP,
   precision = precision,
   recall = recall,
   F1 = F1,
@@ -639,15 +856,7 @@ summary_table <- rbind(summary_table, data.frame(
 summary_table
 ```
 
-```{r}
-hist(simulated_RRF)
-```
-
-```{r}
-summary_table
-```
-
-## Comparison
+# Comparisons
 
 ```{r}
 plot_data <- summary_table %>%
@@ -664,11 +873,12 @@ method_levels <- c(
   "UF (5)", 
   "UF (10)",  
   "UF (RSD)",
-  "Percentile (16th)", 
+  "Mean/Percentile (16th)", 
   "RRFlow",
   "RRF<1",
-  "Machine Learning"
-)
+  "Percentile 10th",
+  "Percentile 20th",
+  "Machine Learning")
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
 
@@ -695,7 +905,7 @@ summary_table %>%
   select(Method, precision, recall, F1, f_betal)
 ```
 
-ROC and Precision Recall plots
+# ROC and Precision Recall plots
 
 ```{r}
 ggplot(summary_table, aes(x = FP_Rate, y = recall, color = Method)) +
@@ -717,5 +927,3 @@ ggplot(summary_table, aes(x = recall, y = precision, color = Method)) +
   theme_minimal()
 
 ```
-
-
