--- a/GC_MS_5_2B.qmd
+++ b/GC_MS_5_2B.qmd
@@ -126,7 +126,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 5
+AET <- 15
 ```
 
 ## Uniform distribution
@@ -868,8 +868,16 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
 ```
 
 ```{r}
-summary_table %>%
+summary_FN <- summary_table %>%
+  mutate(
+    precision = round(precision, 2),
+    recall = round(recall, 2),
+    F1 = round(F1, 2),
+    f_betal = round(f_betal, 2)
+  ) %>%
   select(Method, precision, recall, F1, f_betal)
+
+print(summary_FN)
 ```
 
 # ROC and Precision Recall plots
