--- a/GC_MS_5_2A.qmd
+++ b/GC_MS_5_2A.qmd
@@ -126,7 +126,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 5
+AET <- 15
 ```
 
 ## Uniform distribution
@@ -255,7 +255,6 @@ summary_table <- rbind(summary_table, data.frame(
 ))
 
 ```
-
 
 ```{r}
 hist(base_conc_sim, 
@@ -509,8 +508,7 @@ summary_table <- rbind(summary_table, data.frame(
 
 ```
 
-
-## GC-MS Correction RRF<1
+## GC-MS Correction RRF\<1
 
 This simulation assumes that we know the true RRF of all compounds sampled and therefore performing the conditional correction. We also force the UF to be positive by removing low and high responders.
 
@@ -744,7 +742,6 @@ summary_table <- rbind(summary_table, data.frame(
 summary_table
 ```
 
-
 ```{r}
 summary_table
 ```
@@ -880,8 +877,16 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
 ```
 
 ```{r}
-summary_table %>%
+summary_FN <- summary_table %>%
+  mutate(
+    precision = round(precision, 2),
+    recall = round(recall, 2),
+    F1 = round(F1, 2),
+    f_betal = round(f_betal, 2)
+  ) %>%
   select(Method, precision, recall, F1, f_betal)
+
+print(summary_FN)
 ```
 
 # ROC and Precision Recall plots
