--- a/LC_MS+_10_3A.qmd
+++ b/LC_MS+_10_3A.qmd
@@ -12,10 +12,12 @@ Sys.setenv(RETICULATE_PYTHON = "C:/Users/misak/anaconda3/python.exe")
 
 # Load required packages
 library(tidyverse)
+library(MASS)
 library(dplyr)
 library(purrr)
 library(lubridate)
 library(ggplot2)
+library(ggrepel)
 library(here)
 library(parallel)
 library(pdftools)
@@ -180,6 +182,75 @@ RRF_lnorm[RRF_lnorm<0] <- 0.001 # avoiding negative numbers
 hist(RRF_lnorm)
 ```
 
+# Fit the distribution with fitdistr
+
+```{r}
+set.seed(123)
+
+RRF_superior0 <- lcmsneg_clap_clean$"5 µg/mL"
+RRF_superior0 <- RRF_superior0[RRF_superior0 > 0]
+fit_normal <- fitdistr(RRF_superior0, "normal")
+print(fit_normal)
+fit_lognormal <- fitdistr(RRF_superior0, "lognormal")
+print(fit_lognormal)
+fit_gamma <- fitdistr(RRF_superior0, "gamma")
+print(fit_gamma)
+
+```
+
+```{r}
+RRF_df <- data.frame(RRF = RRF_superior0)
+
+norm_mean <- fit_normal$estimate["mean"]
+norm_sd   <- fit_normal$estimate["sd"]
+lnorm_meanlog <- fit_lognormal$estimate["meanlog"]
+lnorm_sdlog   <- fit_lognormal$estimate["sdlog"]
+gamma_shape <- fit_gamma$estimate["shape"]
+gamma_rate  <- fit_gamma$estimate["rate"]
+
+
+ggplot(RRF_df, aes(x = RRF)) +
+  geom_histogram(aes(y = after_stat(density)), 
+                 bins = 20, 
+                 fill = "lightgray", 
+                 color = "white") +
+  stat_function(fun = dnorm, 
+                args = list(mean = norm_mean, sd = norm_sd),
+                aes(color = "Normal", linetype = "Normal"), 
+                linewidth = 1) +
+  stat_function(fun = dlnorm, 
+                args = list(meanlog = lnorm_meanlog, sdlog = lnorm_sdlog),
+                aes(color = "Log-normal", linetype = "Log-normal"), 
+                linewidth = 1) +
+  stat_function(fun = dgamma, 
+                args = list(shape = gamma_shape, rate = gamma_rate),
+                aes(color = "Gamma", linetype = "Gamma"), 
+                linewidth = 1) +
+  scale_color_manual(name = "Distribution",
+                     values = c("Normal" = "darkblue", 
+                                "Log-normal" = "darkred", 
+                                "Gamma" = "darkgreen")) +
+  scale_linetype_manual(name = "Distribution",
+                        values = c("Normal" = "solid", 
+                                   "Log-normal" = "dashed", 
+                                   "Gamma" = "dotted")) +
+  labs(title = "Fit Comparison: Normal, Log-normal, and Gamma",
+       x = "RRF",
+       y = "Density") +
+  theme_minimal()
+
+```
+
+```{r}
+aic_normal <- AIC(fit_normal)
+aic_lognormal <- AIC(fit_lognormal)
+aic_gamma <- AIC(fit_gamma)
+
+aic_normal
+aic_lognormal
+aic_gamma
+```
+
 # Scenario with uniform distribution & GC/MS data from US FDA CLAP list
 
 ## Initialisation of the comparison table
@@ -196,6 +267,8 @@ summary_table <- data.frame(
   F1 = numeric(),
   f_beta = numeric()
 )
+
+all_distributions <- data.frame()
 ```
 
 ## LC-MS No Correction Scenarios
@@ -210,6 +283,8 @@ total_TP <- 0
 total_TN <- 0
 dist_f1 <- numeric(N_sim)
 dist_f5 <- numeric(N_sim)
+dist_fnr <- numeric(N_sim)
+dist_fpr <- numeric(N_sim)
 beta <- 5
 
 
@@ -228,10 +303,43 @@ corrected_conc <- base_conc_sim * simulated_RRF
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -260,6 +368,17 @@ summary_table <- rbind(summary_table, data.frame(
   F1 = F1,
   f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "No Correction",
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
+
 
 ```
 
@@ -319,10 +438,43 @@ simulated_RRF <- sample(lcmspos_clap_clean$"10 µg/mL", size = N_extractables, r
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -353,6 +505,18 @@ summary_table <- rbind(summary_table, data.frame(
     F1 = F1,
     f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = m_name,
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
+
+
 }
 
 
@@ -400,10 +564,43 @@ corrected_conc <- exp_conc * (meanGCMS / percentileGCMS)
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -433,6 +630,16 @@ summary_table <- rbind(summary_table, data.frame(
   F1 = F1,
   f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "Mean/Percentile (16th)",
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+
+all_distributions <- rbind(all_distributions, metrics_df)
 
 ```
 
@@ -489,10 +696,43 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -521,6 +761,16 @@ summary_table <- rbind(summary_table, data.frame(
   F1 = F1,
   f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "RRFlow",
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+all_distributions <- rbind(all_distributions, metrics_df)
+
 
 ```
 
@@ -577,10 +827,43 @@ corrected_conc[condition] <- exp_conc[condition] / exp_RRF[condition] # average 
   is_above_threshold <- base_conc_sim > AET
   reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -609,6 +892,16 @@ summary_table <- rbind(summary_table, data.frame(
   F1 = F1,
   f_beta = f_beta
 ))
+
+metrics_df <- data.frame(
+  Method = "RRF<1",
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+all_distributions <- rbind(all_distributions, metrics_df)
+
 
 ```
 
@@ -653,10 +946,43 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -688,6 +1014,14 @@ summary_table <- rbind(summary_table, data.frame(
 ))
 
 
+metrics_df <- data.frame(
+  Method = "Percentile 10th",
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+all_distributions <- rbind(all_distributions, metrics_df)
 ```
 
 ## LC-MS Correction percentile 20th
@@ -726,10 +1060,43 @@ corrected_conc <- exp_conc / conservative_RRF_estimate ## need to find rationale
 is_above_threshold <- base_conc_sim > AET
 reported_above_threshold <- corrected_conc > AET
 
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+## Count per iteration
+  iter_TP <- sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FP <- sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
+  iter_FN <- sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+  iter_TN <- sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
+
+  total_TP <- total_TP + iter_TP
+  total_FP <- total_FP + iter_FP
+  total_FN <- total_FN + iter_FN
+  total_TN <- total_TN + iter_TN
+
+  # metrics per iterations
+  iter_prec <- if((iter_TP + iter_FP) > 0) iter_TP / (iter_TP + iter_FP) else 0
+  iter_rec  <- if((iter_TP + iter_FN) > 0) iter_TP / (iter_TP + iter_FN) else 0
+  
+  iter_ActualPos <- iter_TP + iter_FN
+  iter_ActualNeg <- iter_TN + iter_FP
+
+  iter_fnr <- if(iter_ActualPos > 0) iter_FN / iter_ActualPos else 0
+  iter_fpr <- if(iter_ActualNeg > 0) iter_FP / iter_ActualNeg else 0
+  
+  dist_fnr[i] <- iter_fnr * 100
+  dist_fpr[i] <- iter_fpr * 100
+  
+  # F1
+  iter_f1 <- if((iter_prec + iter_rec) > 0) {
+    (2 * iter_prec * iter_rec) / (iter_prec + iter_rec)
+  } else { 0 }
+  
+  # F5
+  denom_beta <- (beta^2 * iter_prec) + iter_rec
+  iter_fbeta <- if(denom_beta > 0) {
+    ((1 + beta^2) * (iter_prec * iter_rec)) / denom_beta
+  } else { 0 }
+  
+  dist_f1[i]   <- iter_f1
+  dist_f5[i]   <- iter_fbeta
 }
 
 count_Above_AET <- total_TP + total_FN
@@ -760,100 +1127,20 @@ summary_table <- rbind(summary_table, data.frame(
   f_beta = f_beta
 ))
 
+metrics_df <- data.frame(
+  Method = "Percentile 20th",
+  F1 = dist_f1,
+  F5 = dist_f5,
+  Percent_FN = dist_fnr,
+  Percent_FP = dist_fpr
+)
+all_distributions <- rbind(all_distributions, metrics_df)
+
 
 ```
 
 ```{r}
 summary_table
-```
-
-```{r}
-summary_table
-```
-
-## Machine Learning
-
-Loading the ML Model
-
-```{python}
-import joblib
-import pandas as pd
-
-# Load the model and the feature list
-model = joblib.load('rf_rrf_model.joblib')
-feats = joblib.load('features.joblib')
-
-def predict_rrf_raw(df):
-    return model.predict(df[feats])
-```
-
-```{r}
-gc_ms <- read_csv("final_model_data.csv") %>%
-  drop_na(BP, `Refractive Index`, TPSA, NHOHCount, NumHDonors, NumRotatableBonds, NOCount) 
-```
-
-```{r}
-set.seed(123)
-N_sim <- 10000
-N_extractables <- 80
-total_FN <- 0
-total_FP <- 0
-total_TP <- 0
-total_TN <- 0
-
-total_points <- N_sim * N_extractables
-
-for (i in 1:N_sim) {
-sim_data <- gc_ms %>% 
-  sample_n(N_extractables, replace = TRUE)
-  
-Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
-Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
-K <- runif(0.1 * N_extractables, min = 10,    max = 100)
-## 3) Concentration from a custom distribution
-base_conc_sim <- sample(c(Z,Y,K))
-## VI) RRF generated via the machine learning
-simulated_RRF <- py$predict_rrf_raw(sim_data)
-## no correction
-corrected_conc <- base_conc_sim * simulated_RRF
-
-is_above_threshold <- base_conc_sim > AET
-reported_above_threshold <- corrected_conc > AET
-
-  total_FN <- total_FN + sum(is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-  total_FP <- total_FP + sum(!is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TP <- total_TP + sum(is_above_threshold & reported_above_threshold, na.rm = TRUE)
-  total_TN <- total_TN + sum(!is_above_threshold & !reported_above_threshold, na.rm = TRUE)
-}
-
-count_Above_AET <- total_TP + total_FN
-count_Below_AET  <- total_TN + total_FP
-FN_Rate_final <- total_FN / count_Above_AET
-FP_Rate_final <- total_FP / count_Below_AET
-
-recall <- total_TP / count_Above_AET
-precision <- total_TP / (total_TP + total_FP)
-
-F1 <- (2 * precision * recall / (precision + recall))
-beta <- 5
-f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
-
-SD_FN <- sqrt(FN_Rate_final * (1 - FN_Rate_final) / count_Above_AET)
-SD_FP <- sqrt(FP_Rate_final * (1 - FP_Rate_final) / count_Below_AET)
-
-
-summary_table <- rbind(summary_table, data.frame(
-  Method = "Machine Learning",
-  FN_Rate = FN_Rate_final,
-  FP_Rate = FP_Rate_final,
-  FN_SD = SD_FN,
-  FP_SD = SD_FP,
-  precision = precision,
-  recall = recall,
-  F1 = F1,
-  f_beta = f_beta
-))
-
 ```
 
 ```{r}
@@ -881,8 +1168,7 @@ method_levels <- c(
   "RRFlow",
   "RRF<1",
   "Percentile 10th",
-  "Percentile 20th",
-  "Machine Learning")
+  "Percentile 20th")
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
 
@@ -904,18 +1190,94 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
 
 ```
 
-```{r}
-summary_FN <- summary_table %>%
-  mutate(
-    precision = round(precision, 2),
-    recall = round(recall, 2),
-    F1 = round(F1, 2),
-    f_beta = round(f_beta, 2)
-  ) %>%
-  select(Method, precision, recall, F1, f_beta)
+# FP vs FN
 
-print(summary_FN)
+```{r}
+plot_data_FN_FP <- pivot_longer(all_distributions, 
+                          cols = c("F5", "Percent_FN", "Percent_FP"), 
+                          names_to = "Metric", 
+                          values_to = "Value")
+
+plot_data_FN_FP$Method <- factor(plot_data_FN_FP$Method, levels = method_levels)
+
 ```
+
+```{r}
+cluster_centers <- all_distributions %>%
+  group_by(Method) %>%
+  summarize(
+    center_FP = mean(Percent_FP, na.rm = TRUE),
+    center_FN = mean(Percent_FN, na.rm = TRUE)
+  )
+
+ggplot(all_distributions, aes(x = Percent_FP, y = Percent_FN, color = Method)) +
+  # Plot the individual simulation dots
+  geom_point(alpha = 0.05, size = 1) +
+  
+  # Draw the 95% confidence ellipses
+  stat_ellipse(linewidth = 1, linetype = 1, type = "norm", level = 0.95) +
+  
+  geom_label_repel(
+    data = cluster_centers, 
+    aes(x = center_FP, y = center_FN, label = Method), 
+    size = 4,
+    fontface = "bold",
+    alpha = 0.9,
+    show.legend = FALSE,
+    box.padding = 0.5,         # Adds "repel force" around the label itself
+    point.padding = 0.5,       # Keeps the label from sitting directly on the exact center coordinate
+    segment.color = "black",   # Makes the pointer line black so it stands out
+    segment.size = 0.8         # Makes the pointer line a bit thicker
+  ) +
+  
+  # Clean up the labels and aesthetics
+  labs(
+    title = "Trade-off: False Positives vs. False Negatives",
+    subtitle = paste0("10,000 Simulations per Method | AET = ", AET, " µg/mL"),
+    x = "False Positive Rate (%)",
+    y = "False Negative Rate (%)",
+    color = "Correction Method"
+  ) +
+  
+  # Clean theme
+  theme_minimal() +
+  theme(
+    # Optional: If you want to remove the legend entirely now that you have labels, 
+    # change "bottom" to "none"!
+    legend.position = "none", 
+    panel.grid.minor = element_blank(),
+    plot.title = element_text(face = "bold")
+  )
+```
+
+# Comparison metrics F5
+
+```{r}
+all_distributions$Method <- factor(all_distributions$Method, levels = method_levels)
+
+ggplot(all_distributions, aes(x = Method, y = F5)) +
+  geom_violin(fill = "orange", alpha = 0.6) +
+  geom_boxplot(width = 0.1, color = "black", alpha = 0.5) +
+  labs(
+    title = paste0("Distribution of F5 scores | LC-MS+ Correction Methods (10 µg/mL)", " AET=", AET, "µg/mL"),
+    subtitle = "Conc. custom distribution, RRF sampled from CLAP list data") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+```{r}
+metrics_distributions <- all_distributions %>%
+  group_by(Method) %>%
+  summarise(
+    Mean_F1 = mean(F1, na.rm = TRUE), 
+    SD_F1 = sd(F1, na.rm = TRUE),
+    Mean_F5 = mean(F5, na.rm = TRUE),
+    SD_F5 = sd(F5, na.rm = TRUE)
+  )
+
+print(metrics_distributions)
+```
+
 
 # ROC and Precision Recall plots
 
